export enum RouteKey {
  /** Screen */
  MovieScreen = 'MovieScreen',
  FavoriteMovieScreen = 'FavoriteMovieScreen',
  BookedMovieScreen = 'BookedMovieScreen',
  BookTicketScreen = 'BookTicketScreen',

  /** Tab */
  HomeTab = 'HomeTab',
}
